<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/planned_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:text="TextView"
        tools:text="@string/planned_steps"
        android:textSize="32sp"/>
    <TextView
        android:id="@+id/planned_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:text="TextView"
        tools:text="@string/planned_distance"
        android:textSize="32sp"/>

    <Button
        android:id="@+id/toggle_walk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start Planned Walk/Run" />

    <TextView
        android:id="@+id/miles_taken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/miles_taken"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/step_taken"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/steps_taken"
        android:textSize="32sp" />
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/steps_left"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="32sp" />
        <TextView
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  steps"
            android:textSize="32sp" />
    </LinearLayout>
    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="To go today"
        android:textSize="32sp" />
    <Button
        android:id="@+id/set_goal"
        android:textSize="20sp"
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="set goal"
        android:onClick="set_goal"/>


</LinearLayout>